fixup: cargo version

--- a/dex/Cargo.toml
+++ b/dex/Cargo.toml
@@ -16,7 +16,7 @@ default = ["program"]
 no-entrypoint = []
 
 [dependencies]
-anchor-lang = ">=0.25.0 <0.30.0"
+anchor-lang = "0.29.0"
 solana-program = "1.10.41"
 solana-security-txt = "1.0.2"
 spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
